--- a/project/css/signup.css
+++ b/project/css/signup.css
@@ -55,30 +55,28 @@ form{
   justify-content:center;
   background-color:#f5f5f5;
   text-align: center;
-  padding:80px;
+  padding:40px;
   border-radius: 15px;
-  height: 360px;
+  height: 900px;
   margin-left: 150px;
+  /* margin-bottom: 40px */
 }
 form h2{
   color: #0e1c2e;
   
 }
-#yes,#no{
-  background-color:#ff9400;
-  width: 190px;
+input{
+  width: 100%;
+  padding:10px;
+  outline: none;
+  margin-top: 10px;
+}
+input[type=submit]{
+  background-color:#f6881f;
   border: none;
-  font-size: 20px;
-  padding: 10px;
-  margin-bottom: 10px;
   color:white;
-}
-form a{
-  color:white;
-  text-decoration: none;
-}
-#yes{
-  margin-top: 50px;
+  cursor: pointer;
+  font-size: 17px;
 }
 .footer{
   /* border:1px solid red; */
