--- a/project/css/signup.css
+++ b/project/css/signup.css
@@ -13,12 +13,36 @@
   background-size: 100% auto;
   background-position: bottom center;
   padding-bottom: 100px;
-  height: 100vh;
+  height: 102vh;
 }
-#logo{
-  width: 147px;
-  height: 130px;
-}
+#logo_login{
+  display: flex;
+  height: 100px;
+  /* border: 1px solid red; */
+  justify-content: space-between;
+  padding-left: 10px;
+  padding-right: 10px;
+  align-items: center;
+  padding-top: 30px;
+  }
+  #logo_login>img{
+    height: 250px;
+  }
+  #logo_login>div>button{
+    width: 130px;
+    height: 50px;
+    background-color: rgb(255,148,0);
+    border: none;
+    border-radius: 5px;
+  }
+  #logo_login>div>button>a:hover{
+    color: rgb(255,148,0);
+  }
+  #logo_login>div>button>a{
+    text-decoration: none;
+    color: white;
+    font-size: 22px;
+  }
 .data_div>div img{
   width:100px;
 }
@@ -53,30 +77,36 @@
 form{
   width: 36%;
   justify-content:center;
-  background-color:#f5f5f5;
-  text-align: center;
+  /* background-color:#f5f5f5; */
+  /* text-align: center; */
   padding:40px;
   border-radius: 15px;
-  height: 900px;
+  /* height: 800; */
   margin-left: 150px;
   /* margin-bottom: 40px */
 }
 form h2{
   color: #0e1c2e;
+  text-align:center;
   
 }
 input{
   width: 100%;
   padding:10px;
   outline: none;
-  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 17px;
 }
 input[type=submit]{
-  background-color:#f6881f;
+  background-color:#0e1c2e;
   border: none;
   color:white;
   cursor: pointer;
   font-size: 17px;
+  margin-top: 10px;
+}
+input[type=submit]:hover{
+  color:#0e1c2e;
 }
 .footer{
   /* border:1px solid red; */
@@ -104,3 +134,19 @@ input[type=submit]{
 .link{
   color:#0070d7;
 } 
+
+select{
+  width: 100%;
+  padding:10px;
+  margin-top: 10px;
+  font-size: 17px;
+}
+label{
+  /* border: 1px solid red; */
+  text-align: left;
+  color: white;
+  font-weight: 600;
+}
+input[type="date"]{
+  margin: 0;
+}
